Refactor order system and update Docker configuration